[project]
name = "tbongkim03_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tbongkim03-history = 'tbongkim03_history.cli:query'

[tool.pdm]
distribution = true
